--- a/web/src/global.css
+++ b/web/src/global.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&display=swap');
 @import "tailwindcss";
+@plugin "tailwindcss-animate";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -35,6 +37,13 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+
+
+  --logs-text: var(--foreground);
+  --success: var(--muted);
+  --warning: oklch(0.72 0.21 73.4);
+  --error: oklch(0.71 0.24 25.1);
+  --info: oklch(0.61 0.16 238.2)
 }
 
 .dark {
@@ -69,9 +78,18 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+
+  --logs-text: oklch(94.1% 0 0);
+  --success: var(--muted);
+  --warning: oklch(0.72 0.21 73.4);
+  --error: oklch(0.71 0.24 25.1);
+  --info: oklch(0.61 0.16 238.2)
 }
 
+
 @theme inline {
+  --font-logs: IBM Plex Mono, monospace;
+
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
@@ -108,6 +126,12 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+
+  --color-success: var(--success);
+  --color-warning: var(--warning);
+  --color-error: var(--error);
+  --color-info: var(--info);
 }
 
 @layer base {
